Refactored br to ul

--- a/first_site.html
+++ b/first_site.html
@@ -30,13 +30,15 @@
 <a href="http://vk.com/audios-53003092">- отработанный и интересный материал;</a><br>
 <a href="http://vk.com/public114533790">- дружелюбная, стёбная атмосфера;</a><br>
 - регулярные репетиции и концерты;<br>
-<a href="http://vk.com/albums-53003092">- недурный внешний вид.</a></p>   
-<p>Каким мы видим тебя:<br>
-- сильный и внушительный вокал, с солидным диапазоном;<br>
-- харизматичный и привлекательный, возрастом от 18 до 25 лет;<br>
-- проникающий в души людей своим вокалом;<br>
-- не трясущийся от страха перед толпой;<br>
-- серьезно настроенный на музыкальную деятельность.</p>
+<a href="http://vk.com/albums-53003092">- недурный внешний вид.</a></p>
+<p>Каким мы видим тебя:</p>
+<ul class="perks-list">
+  <li>сильный и внушительный вокал, с солидным диапазоном;</li>
+  <li>харизматичный и привлекательный, возрастом от 18 до 25 лет;</li>
+  <li>проникающий в души людей своим вокалом;</li>
+  <li>не трясущийся от страха перед толпой;</li>
+  <li>серьезно настроенный на музыкальную деятельность;</li>
+</ul>
 <p>Приятным бонусом было бы обнаружить в тебе творца и генератора идей. Мы серьезно настроены на успех и активное продвижение.</p>
 <p>Если тебе наша музыка показалась близкой по духу, то оставляй свою заявку в форме выше, кидай фоточки, демозаписи и свою краткую биографию</p>
 </dir>
